# HideSeek-NAO

./: .rosinstall  .rosinstall.bak  README.md
darknet_ros/darknet_ros/: CMakeLists.txt
darknet_ros/darknet_ros/config/: ros.yaml  yolov3-myData.yaml
darknet_ros/darknet_ros/launch/: darknet_ros.launch  darknet_ros_nodelet.launch  yolo_v3.launch
darknet_ros/darknet_ros/yolo_network_config/cfg/: yolov3-myData.cfg
detect_aruco/: CMakeLists.txt  README
detect_aruco/launch/: detect_aruco.launch
detect_aruco/msg/: arucomsgs.msg  desti.msg  naolocation.msg
detect_aruco/scripts/: drawRoute.cpp  getTransformMatrix.py  localization.py  tf_broadcaster.cpp
detect_aruco/src/: a_star.py  aruco_finder.cpp  detect_dark.cpp
detect_aruco/srv/: localization.srv  transform.srv  walk_polar.srv
detect_darkness/: CMakeLists.txt  package.xml
detect_darkness/action/: Walk.action
detect_darkness/launch/: nao.launch
detect_darkness/scripts/: move_service.py
detect_darkness/src/: client.cpp  main.cpp
detect_darkness/srv/: aruco_coordinate.srv  detect_process.srv  move_direction.srv
detect_walk/: CMakeLists.txt  README  package.xml
detect_walk/launch/: nao.launch
detect_walk/msg/: squatandhide.msg
detect_walk/scripts/: brain.py  move_service.py  shakehead.py  walk_general.py
detect_walk/src/: detect_dark.cpp  squat.py
detect_walk/srv/: walkdirection.srv
detector/: CMakeLists.txt  package.xml
detector/src/: sound_test.py
detector/srv/: srv1.srv
localization/: CMakeLists.txt  package.xml
localization/launch/: localization.launch
localization/src/: EKF.py  EKF_SLAM_Node.py
sound_loc/: CMakeLists.txt
sound_loc/src/: searching.py  sound.py  sound_outdated.py  tactile.py
walk/: CMakeLists.txt  package.xml
walk/src/: client.cpp
ws_moveit/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
ws_moveit/devel/lib/moveit_tutorials/: cylinder_segment  motion_planning_api_tutorial  motion_planning_pipeline_tutorial  move_group_interface_tutorial  planning_scene_ros_api_tutorial  planning_scene_tutorial  robot_model_and_robot_state_tutorial  ros_api_tutorial  state_display_tutorial  visualizing_collisions_tutorial
ws_moveit/devel/lib/pkgconfig/: moveit_tutorials.pc  panda_moveit_config.pc
ws_moveit/devel/share/moveit_tutorials/cmake/: moveit_tutorialsConfig.cmake
ws_moveit/devel/share/panda_moveit_config/cmake/: panda_moveit_configConfig.cmake
ws_moveit/src/: hand.urdf
